@@ -25,15 +25,22 @@
 
 #include <iterator>
 
-// this is a private header, included in RcppCommon.h
-// don't include it directly
-
 namespace Rcpp{
 	
 template<typename T> SEXP wrap_extra_steps( SEXP x ){
 	return x ;
-} 
+}
 
+namespace internal{
+	template <typename T>
+	class WrapIterableExtraStepsHelper {
+	public:
+		WrapIterableExtraStepsHelper( const T& ) {
+			Rprintf( "default WrapIterableExtraStepsHelper %s\n", DEMANGLE(T) ) ;
+		}
+		inline SEXP get( SEXP x ) const { return x ; }
+	} ;
+} // internal
 } // Rcpp
 
 #endif
