@@ -37,10 +37,10 @@ public:
 	Col( const LHS_TYPE& lhs) : nr( lhs.ncol() ), nc( lhs.ncol() ) {}
 	
 	inline int operator[]( int index ) const {
-		return Rcpp::internal::get_column( index, nr) ;
+		return Rcpp::internal::get_column( index, nr) + 1 ;
 	}
 	inline int operator()( int i, int j ) const {
-		return j ;
+		return j + 1 ;
 	}
 	
 	inline int size() const { return nr * nc ; }
