@@ -1,4 +1,3 @@
-
 #!/usr/bin/r -t
 #
 # Copyright (C) 2010	Dirk Eddelbuettel and Romain Francois
@@ -18,48 +17,49 @@
 # You should have received a copy of the GNU General Public License
 # along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-# does not yet work because of some compiler ambiguities
+.setUp <- function(){
+	if( ! exists( ".rcpp.sugar.matrix", globalenv() ) ){
+		# definition of all the functions at once
+		
+		sugar.functions <- list( 
+			"runit_outer" = list( 
+				signature( x = "numeric", y = "numeric" ), 
+'
+NumericVector xx(x) ;
+NumericVector yy(y);
+NumericMatrix m = outer( xx, yy, std::plus<double>() ) ;
+return m ;
+'		), 
+			"runit_row" = list( 
+				signature( x = "numeric" ), 
+'
+NumericMatrix xx(x) ;
+return List::create( 
+	_["row"] = row( xx ), 
+	_["col"] = col( xx )
+	) ;
+'
+			) 
+		)
+		
+		signatures <- lapply( sugar.functions, "[[", 1L )
+		bodies <- lapply( sugar.functions, "[[", 2L )
+		fx <- cxxfunction( signatures, bodies, plugin = "Rcpp")
+		getDynLib( fx ) # just forcing loading the dll now
+		assign( ".rcpp.sugar.matrix", fx, globalenv() )			
+	}
+}
+			
+test.sugar.outer <- function( ){
+	fx <- .rcpp.sugar.matrix$runit_outer
+	x <- 1:2
+	y <- 1:5
+	checkEquals( fx(x,y) , outer(x,y,"+") )
+}
 
-# .setUp <- function(){
-# 	if( ! exists( ".rcpp.sugar.matrix", globalenv() ) ){
-# 		# definition of all the functions at once
-# 		
-# 		sugar.functions <- list( 
-# 			"runit_outer" = list( 
-# 				signature( x = "numeric", y = "numeric" ), 
-# '
-# NumericVector xx(x) ;
-# NumericVector yy(y);
-# NumericMatrix m = outer( xx, yy, std::plus<double>() ) ;
-# return m ;
-# '		), 
-# 			"runit_row" = list( 
-# 				signature( x = "numeric" ), 
-# '
-# NumericMatrix xx(x) ;
-# return wrap( row( xx ) ) ;
-# '
-# 			) 
-# 		)
-# 		
-# 		signatures <- lapply( sugar.functions, "[[", 1L )
-# 		bodies <- lapply( sugar.functions, "[[", 2L )
-# 		fx <- cxxfunction( signatures, bodies, plugin = "Rcpp")
-# 		getDynLib( fx ) # just forcing loading the dll now
-# 		assign( ".rcpp.sugar", fx, globalenv() )			
-# 	}
-# }
-# 			
-# test.sugar.outer <- function( ){
-# 	fx <- .rcpp.sugar.matrix$runit_outer
-# 	x <- 1:2
-# 	y <- 1:5
-# 	checkEquals( fx(x,y) , outer(x,y,"+") )
-# }
-# 
-# test.sugar.row <- function( ){
-# 	fx <- .rcpp.sugar.matrix$runit_row
-# 	m <- matrix( 1:16, nc = 4 )
-# 	checkEquals( fx(m), row(m) ) 
-# }
-# 
+test.sugar.row <- function( ){
+	fx <- .rcpp.sugar.matrix$runit_row
+	m <- matrix( 1:16, nc = 4 )
+	checkEquals( fx(m), list( row = row(m), col = col(m) ) ) 
+}
+
